--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import-normalize; /* bring in normalize.css styles */
 
+ul {
+  list-style: none;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
